feat: 增加linux平台支持，支持打包rpm、deb